--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,8 +4,8 @@
 
 {% for post in posts %}
     <div>
-        <p>published: {{ post.published_date }}</p>
         <h2><a href="">{{ post.title }}</a></h2>
         <p>{{ post.text|linebreaksbr }}</p>
+        <!--<p style="font-weight: bold;">Published: {{ post.published_date }}</p>-->
     </div>
 {% endfor %}
